--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "cd public/bot; npm run start",
+    "start": "NODE_ENV=development;cd public/bot; npm run start",
     "build": "cd public/bot; npm run build",
     "server": "cd public/bot; serve -s build --p 3000",
     "prod": "npm run build; npm run server"
@@ -14,7 +14,6 @@
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
-    "inferno-devtools": "^1.4.2",
     "morgan": "~1.7.0",
     "serve": "^5.1.1"
   }
