--- a/public/bot/package.json
+++ b/public/bot/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "inferno": "^1.4.2",
-    "inferno-component": "^1.4.2"
+    "inferno-component": "^1.4.2",
+    "inferno-redux": "^1.4.2",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "inferno-scripts": "1.0.0"
